<resources>
    <string name="app_name">微点筷客</string>
    <string name="icon_home">首页</string>
    <string name="icon_appointment">预约</string>
    <string name="icon_service">服务</string>
    <string name="icon_mine">我的</string>

    <string name="filter_all">全部</string>
    <string name="filter_nearby">附近</string>
    <string name="filter_sort">智能排序</string>
    <string name="filter_filter">筛选</string>


</resources>
