<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="35dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_head_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/rl_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_all"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/filter_all"
                android:textColor="@color/font_black_2"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/iv_all_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_down_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/font_black_5" />

        <RelativeLayout
            android:id="@+id/rl_nearby"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_nearby"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/filter_nearby"
                android:textColor="@color/font_black_2"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/iv_nearby_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_down_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/font_black_5" />

        <RelativeLayout
            android:id="@+id/rl_sort"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_sort"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/filter_sort"
                android:textColor="@color/font_black_2"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/iv_sort_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_down_arrow" />
        </RelativeLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/font_black_5" />

        <RelativeLayout
            android:id="@+id/rl_filter"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_filter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/filter_filter"
                android:textColor="@color/font_black_2"
                android:textSize="13sp" />

            <ImageView
                android:id="@+id/iv_filter_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/icon_down_arrow" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/font_black_5" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view_mask_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/half_transparent" />

        <LinearLayout
            android:id="@+id/ll_content_list_view"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <ListView
                android:id="@+id/lv_left"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:background="@color/font_black_6"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:scrollbars="none"
                android:visibility="gone" />

            <ListView
                android:id="@+id/lv_right"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:scrollbars="none"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>